--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "get-all": "node src/scripts/getAllContacts",
-    "generate": "node src/scripts/generateContacts.js",
-    "add-one": "node src/scripts/addOneContact.js",
-    "count": "node src/scripts/countContacts.js",
-    "remove-last": "node src/scripts/removeLastContact.js",
-    "remove-all": "node src/scripts/removeAllContacts.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +16,10 @@
     "@eslint/js": "^9.2.0",
     "@faker-js/faker": "^9.8.0",
     "eslint": "^9.2.0",
-    "globals": "^15.1.0"
+    "globals": "^15.1.0",
+    "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
