--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "goit-node-js",
+  "name": "goit-node",
   "version": "1.0.0",
   "description": "goit-node-js",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@faker-js/faker": "^9.8.0",
-    "eslint": "^9.2.0",
+    "eslint": "^9.30.1",
     "globals": "^15.1.0",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "express": "^5.1.0"
-  }
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.1",
+    "pino": "^9.7.0",
+    "pino-http": "^10.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlyonaDmytrenko/nodejs-hw-mongodb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AlyonaDmytrenko/nodejs-hw-mongodb/issues"
+  },
+  "homepage": "https://github.com/AlyonaDmytrenko/nodejs-hw-mongodb#readme"
 }
