--- a/src/swagger/components/schemas/contact.yaml
+++ b/src/swagger/components/schemas/contact.yaml
@@ -33,6 +33,10 @@ required:
       default: false
     contactType:
       type: string
+      photo:
+        type: string
+        description: Contact photo
+        default: null
     userId:
       type: string
       description: User id
