--- a/src/swagger/paths/contacts/{id}/get.yaml
+++ b/src/swagger/paths/contacts/{id}/get.yaml
@@ -32,4 +32,4 @@ tags:
                 type: string
                 example: Successfully get contact
               data:
-             
+             $ref: .../.../components/schemas/contact.yaml
