--- a/src/swagger/paths/contacts/{id}/get.yaml
+++ b/src/swagger/paths/contacts/{id}/get.yaml
@@ -1,35 +1,21 @@
 tags:
   - Contacts
-   summary: Get contact by contactId
-   operationId: getContact
-   description: Get contact by contactId
-   security:
-    - bearerAuth: []
-   parameters:
-    - in: query
-      name: contactId
-      required: true
-      schema:
-        type: string
-        example: 123456789
-
-   responses:
-    '200':
-       description: Successfully get contact by id
-       content:
-         application/json:
-           schema:
-            type: object
-            required:
-              - status
-              - message
-              - data
-            properties:
-              status:
-                type: integer
-                example: 200
-              message:
-                type: string
-                example: Successfully get contact
-              data:
-             $ref: .../.../components/schemas/contact.yaml
+summary: Get contact by contactId
+operationId: getContact
+description: Get contact by contactId
+security:
+  - bearerAuth: []
+parameters:
+  - in: path
+    name: contactId
+    required: true
+    schema:
+      type: string
+      example: 123456789
+responses:
+  '200':
+    $ref: './components/responses/getContact200.yaml'
+  '401':
+    $ref: './components/responses/getContact401.yaml'
+  '404':
+    $ref: './components/responses/getContact404.yaml'
